added padding to footer middle

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <span> > </span>
                 <a href="#">MacBook Pro 14 inch and 16 inch</a>
             </div>
+            </div>
         </div>
         <div class="footer__middle">
         <div class="footer__column">
